[package]
name = "grainboy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.71"
bytemuck = { version = "1.13.1", features = ["derive"] }
cfg-if = "1"
chrono = "0.4.26"
image = { version = "0.24.6", default-features = false, features = [
    "png",
    "jpeg",
] }
instant = "0.1.12"
pollster = "0.3.0"
wgpu = "0.16.0"
winit = "0.28.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = "15.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.16", features = ["webgl"] }
